Added photos from Carnival in Venice, 2019

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Girls.js - Interaktywna galeria</title>
+    <title>Gallery - Carnival in Venice, February 2019</title>
     <link href="style.css" type="text/css" rel="stylesheet" />
   </head>
 
@@ -12,46 +12,67 @@
         <figure id="slide1" class="show">
           <img src="photos/image1.jpg" width="100%" />
           <figcaption>
-            "Medium" by
-            <a href="https://www.flickr.com/photos/thomashawk/14586158819/"
-              >Thomas Hawk</a
-            >.
+            Carnival in Venice, February 2019
           </figcaption>
         </figure>
         <figure id="slide2">
           <img src="photos/image2.jpg" width="100%" />
           <figcaption>
-            "Colorado" by
-            <a href="https://www.flickr.com/photos/stuckincustoms/88370744"
-              >Trey Ratcliff</a
-            >.
+            Carnival in Venice, February 2019
           </figcaption>
         </figure>
         <figure id="slide3">
           <img src="photos/image3.jpg" width="100%" />
           <figcaption>
-            "Early Morning at the Monte Vista Wildlife Refuge, Colorado" by
-            <a href="https://www.flickr.com/photos/davesoldano/8572429635"
-              >Dave Soldano</a
-            >.
+            Carnival in Venice, February 2019
           </figcaption>
         </figure>
         <figure id="slide4">
           <img src="photos/image4.jpg" width="100%" />
           <figcaption>
-            "Sunrise in Eastern Colorado" by
-            <a href="https://www.flickr.com/photos/35528040@N04/6673031153"
-              >Pam Morris</a
-            >.
+            Carnival in Venice, February 2019
           </figcaption>
         </figure>
         <figure id="slide5">
           <img src="photos/image5.jpg" width="100%" />
           <figcaption>
-            "Colorado colors" by
-            <a href="https://www.flickr.com/photos/cptspock/2857543585"
-              >Jasen Miller</a
-            >.
+            Carnival in Venice, February 2019
+          </figcaption>
+        </figure>
+        <figure id="slide6">
+          <img src="photos/image6.jpg" width="100%" />
+          <figcaption>
+            Carnival in Venice, February 2019
+          </figcaption>
+        </figure>
+        <figure id="slide7">
+          <img src="photos/image7.jpg" width="100%" />
+          <figcaption>
+            Carnival in Venice, February 2019
+          </figcaption>
+        </figure>
+        <figure id="slide8">
+          <img src="photos/image8.jpg" width="100%" />
+          <figcaption>
+            Carnival in Venice, February 2019
+          </figcaption>
+        </figure>
+        <figure id="slide9">
+          <img src="photos/image9.jpg" width="100%" />
+          <figcaption>
+            Carnival in Venice, February 2019
+          </figcaption>
+        </figure>
+        <figure id="slide10">
+          <img src="photos/image10.jpg" width="100%" />
+          <figcaption>
+            Carnival in Venice, February 2019
+          </figcaption>
+        </figure>
+        <figure id="slide11">
+          <img src="photos/image11.jpg" width="100%" />
+          <figcaption>
+            Carnival in Venice, February 2019
           </figcaption>
         </figure>
         <div id="prev" class="prev">&laquo;</div>
@@ -65,9 +86,15 @@
           <li><button id="pin3" class="pin" /></li>
           <li><button id="pin4" class="pin" /></li>
           <li><button id="pin5" class="pin" /></li>
+          <li><button id="pin6" class="pin" /></li>
+          <li><button id="pin7" class="pin" /></li>
+          <li><button id="pin8" class="pin" /></li>
+          <li><button id="pin9" class="pin" /></li>
+          <li><button id="pin10" class="pin" /></li>
+          <li><button id="pin11" class="pin" /></li>
         </ul>
 
-        <button id="play" class="play"></button>
+        <!-- <button id="play" class="play"></button> -->
       </nav>
     </div>
     <script type="text/javascript" src="gallery.js"></script>
